--- a/ui/style.css
+++ b/ui/style.css
@@ -124,7 +124,7 @@ h1 {
 }
 
 body.dark-theme .toggle-theme:hover {
-    color: #ebebeb;
+    color: #333;
 }
 
 body.dark-theme {
@@ -137,7 +137,7 @@ body.dark-theme .container {
     color: #fff;
 }
 
-body.dark-theme .result, body.dark-theme .time-taken {
+body.dark-theme .result, body.dark-theme .time-taken, body.dark-theme .cache-status {
     background-color: #444;
     color: white;
 }
@@ -150,3 +150,109 @@ body.dark-theme .btn:hover {
     background-color: #013d7d;
 }
 
+.modal {
+    display: none; /* Hide the modal by default */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 400px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+}
+
+.modal-content .form-group {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.modal-content .form-group label {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.modal-content .form-group input[type="number"],
+.modal-content .form-group input[type="text"] {
+    flex: 2;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.modal-content .form-group input[type="checkbox"] {
+    margin-left: 10px;
+}
+
+.modal-content .btn {
+    width: 100%;
+    margin-top: 10px;
+}
+
+
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+.settings-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #333;
+    font-size: 22px;
+}
+
+.settings-btn:hover {
+    color: #ebebeb;
+}
+
+body.dark-theme .settings-btn:hover {
+    color: #333;
+}
+
+.dark-theme {
+    background-color: #333;
+    color: #fff;
+}
+
+.dark-theme .container {
+    background-color: #444;
+}
+
+.dark-theme .toggle-theme i,
+.dark-theme .settings-btn i {
+    color: #fff;
+}
+
+.dark-theme .modal-content {
+    background-color: #444;
+    color: #fff;
+}
+
+.dark-theme .modal-content .form-group label {
+    color: #fff;
+}
